--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,4 +6,7 @@ description: "Looks like there has been a mistake. Nothing exists here."
 redirect: true
 ---
 
+Congrats!!.. looks like you have found an empty set.
+
+
 You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
